// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageBlock: Component should render correctly 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="pageBlock.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Page Block"
        id="pageBlock.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="pageBlock.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Page Block"
        id="pageBlock.title"
        values={Object {}}
      />
    }
  />
  <styled.form
    onSubmit={[Function]}
  >
    <LoadingWrapper
      error={null}
      loading={false}
      noData={false}
      noDataContent={null}
    >
      <PageBlockForm
        block={
          Object {
            "page": Object {
              "id": 1,
            },
          }
        }
        fetchPageBlock={
          [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "blockId": "1",
                },
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Promise {},
              },
            ],
          }
        }
        handleChange={[Function]}
        handleSubmit={[Function]}
        history={
          Object {
            "push": [Function],
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        isSubmitting={false}
        match={
          Object {
            "params": Object {
              "blockId": "1",
            },
          }
        }
        removePageBlock={[Function]}
        setFieldValue={[Function]}
        values={Object {}}
      />
      <Styled(Span)
        id="removePageBlockDesktopBtn"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Remove Page Block"
          id="pageBlock.removePageBlock"
          values={Object {}}
        />
      </Styled(Span)>
    </LoadingWrapper>
    <NavigationContainer
      hideOnDesktop={false}
      right={false}
    >
      <BackButton
        disabled={false}
        id="backBtn"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Back"
          id="pageBlock.back"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        disabled={true}
        id="editPageBlockBtn"
        loading={false}
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Save"
          id="pageBlock.save"
          values={Object {}}
        />
      </NextButton>
    </NavigationContainer>
  </styled.form>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Removing a block will also remove any image you uploaded. Are you sure you want to proceed?"
        id="pageBlock.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="pageBlock.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        id="confirmRemovalBtn"
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="pageBlock.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</styled.div>
`;

exports[`PageBlock: Component should render correctly with loader 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="pageBlock.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Page Block"
        id="pageBlock.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="pageBlock.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Page Block"
        id="pageBlock.title"
        values={Object {}}
      />
    }
  />
  <styled.form
    onSubmit={[Function]}
  >
    <LoadingWrapper
      error={null}
      loading={true}
      noData={false}
      noDataContent={null}
    >
      <PageBlockForm
        block={
          Object {
            "page": Object {
              "id": 1,
            },
          }
        }
        fetchPageBlock={[Function]}
        handleChange={[Function]}
        handleSubmit={[Function]}
        history={
          Object {
            "push": [Function],
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        isSubmitting={false}
        match={
          Object {
            "params": Object {
              "blockId": "1",
            },
          }
        }
        removePageBlock={[Function]}
        setFieldValue={[Function]}
        values={Object {}}
      />
      <Styled(Span)
        id="removePageBlockDesktopBtn"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Remove Page Block"
          id="pageBlock.removePageBlock"
          values={Object {}}
        />
      </Styled(Span)>
    </LoadingWrapper>
    <NavigationContainer
      hideOnDesktop={false}
      right={false}
    >
      <BackButton
        disabled={false}
        id="backBtn"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Back"
          id="pageBlock.back"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        disabled={true}
        id="editPageBlockBtn"
        loading={false}
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Save"
          id="pageBlock.save"
          values={Object {}}
        />
      </NextButton>
    </NavigationContainer>
  </styled.form>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Removing a block will also remove any image you uploaded. Are you sure you want to proceed?"
        id="pageBlock.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="pageBlock.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        id="confirmRemovalBtn"
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="pageBlock.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</styled.div>
`;
